--- a/public/components/staticpart/home.html
+++ b/public/components/staticpart/home.html
@@ -1,4 +1,9 @@
-<div class="header header-temp">
+<script src="../../libs/smooth-scroll.min.js"></script>
+<script type="text/javascript">
+    smoothScroll.init();
+</script>
+
+<div class="header header-temp" style="position:fixed;width:100%;">
     <div class="container">
         <div class="header-nav">
             <nav class="navbar navbar-temp navbar-default navbar-default-temp">
@@ -10,17 +15,25 @@
                         <span class="icon-bar icon-bar-temp"></span>
                         <span class="icon-bar icon-bar-temp"></span>
                     </button>
-                    <h2><a class="navbar-brand navbar-brand-temp" ui-sref="home"><i style="padding-top:10px" class="glyphicon glyphicon-road" aria-hidden="true"></i><span>Logi</span>Port</a></h2>
+                    <h2><a class="navbar-brand navbar-default-temp navbar-brand-temp" ui-sref="home"><i style="padding-top:10px" class="glyphicon glyphicon-road" aria-hidden="true"></i><span>Logi</span>Port</a></h2>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-collapse-temp nav-wil" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-nav-temp">
-                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2 active active-temp" href="home">Home</a></li>
-                        <!-- <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="about">About</a></li> -->
+
+                        <style type="text/css">
+                            .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover{
+                                  background-color: transparent;
+                                  color:#2FD828;
+                            }
+                        </style>
+
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="#home">Home</a></li>
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" data-scroll href="#about">About</a></li> 
                         <!-- <li><a class="hvr-overline-from-center button2" href="typography">Academics</a></li> -->
                         <!-- <li><a class="hvr-overline-from-center button2" href="services.html">Services</a></li> -->
-                        <!-- <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="contact">Contact</a></li>
-                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="login">Login</a></li> -->
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" data-scroll href="#contact">Contact</a></li>
+                        <!--<li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="login">Login</a></li> -->
                     </ul>
                     <!-- <div class="search-box">
 							<div id="sb-search" class="sb-search">
@@ -39,118 +52,143 @@
     </div>
 </div>
 <!-- header -->
-<!-- banner -->
-<div class="banner banner-temp">
-    <div class="container">
-        <script>
-        // You can also use "$(window).load(function() {"
-        $(function() {
-            // Slideshow 4
-            $("#slider3").responsiveSlides({
-                auto: true,
-                pager: true,
-                nav: false,
-                speed: 500,
-                namespace: "callbacks",
-                before: function() {
-                    $('.events').append("<li>before event fired.</li>");
-                },
-                after: function() {
-                    $('.events').append("<li>after event fired.</li>");
-                }
-            });
-        });
-        </script>
-        <div id="top" class="callbacks_container callbacks_container-temp">
-            <ul class="rslides rslides-temp" id="slider3">
-                <li>
-                    <div class="banner-info banner-info-temp">
-                        <h3>Enabling Logistics with Technology</h3>
-                    </div>
-                </li>
-                <li>
-                    <div class="banner-info banner-info-temp">
-                        <h3>Efficient and Sustainable solutions </h3>
-                    </div>
-                </li>
-                <li>
-                    <div class="banner-info banner-info-temp">
-                        <h3>Data Driven Approach towards Future</h3>
-                    </div>
-                </li>
-                <!-- <li>
-                    <div class="banner-info banner-info-temp">
-                        <h3>Operational Excellence</h3>
-                    </div>
-                </li> -->
-            </ul>
-        </div>
-    </div>
-    <div class="row"></progress>">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Please Sign In</h3>
-                </div>
-                <div class="panel-body">
-                    <form role="form" ng-controller="loginCtrl" ng-submit="login(credentials)">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="E-mail" name="username" type="text" 
-                                ng-model="credentials.username" autofocus>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password"
-                                ng-model="credentials.password" value="">
-                            </div>
-                            <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
+<div>
     
-<!-- //banner -->
-<!-- banner-bottom banner-bottom-temp -->
-<div class="banner-bottom banner-bottom-temp">
-    <div class="container">
-        <h2 class="tittle tittle-temp">WELCOME TO LOGIPORT</h2>
-        <div class="bottom-grids bottom-grids-temp">
-            <div class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp">
-                <div class="bottom-text bottom-text-temp">
-                    <h3>Reliability</h3>
-                    <p>Time to value<br> manage logistics risk<br> Client centric approach<br> efficient services</p>
-                    <br>
-                    <br>
-                    <br>
-                </div>
-                <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-road" aria-hidden="true"></span></div>
+    <!-- banner -->
+    <div class="banner banner-temp" id="home">
+        <div class="container">
+            <script>
+            // You can also use "$(window).load(function() {"
+            $(function() {
+                // Slideshow 4
+                $("#slider3").responsiveSlides({
+                    auto: true,
+                    pager: true,
+                    nav: false,
+                    speed: 500,
+                    namespace: "callbacks",
+                    before: function() {
+                        $('.events').append("<li>before event fired.</li>");
+                    },
+                    after: function() {
+                        $('.events').append("<li>after event fired.</li>");
+                    }
+                });
+            });
+            </script>
+            <div id="top" class="callbacks_container callbacks_container-temp">
+                <ul class="rslides rslides-temp" id="slider3">
+                    <li>
+                        <div class="banner-info banner-info-temp">
+                            <h3>Enabling Logistics with Technology</h3>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="banner-info banner-info-temp">
+                            <h3>Efficient and Sustainable solutions </h3>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="banner-info banner-info-temp">
+                            <h3>Data Driven Approach towards Future</h3>
+                        </div>
+                    </li>
+                    <!-- <li>
+                        <div class="banner-info banner-info-temp">
+                            <h3>Operational Excellence</h3>
+                        </div>
+                    </li> -->
+                </ul>
             </div>
-            <div class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp">
-                <div class="bottom-text bottom-text-temp">
-                    <h3>Visiblity</h3>
-                    <p>Real Time tracking of fleet with complete geo-visualization,Load status and Driver status.</p>
-                    <br>
-                    <br>
-                    <br>
+        </div>
+        <div class="row"></progress>
+            <div class="col-md-4 col-md-offset-4">
+                <div class="login-panel panel panel-default">
+                    <div class="panel-heading" style="border-radius:10px;">
+                        <h3 class="panel-title" style="text-align:center;">Please Sign In</h3>
+                    </div>
+                    <div class="panel-body">
+                        <form role="form" ng-controller="loginCtrl" ng-submit="login(credentials)">
+                            <fieldset>
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="E-mail" name="username" type="text" 
+                                    ng-model="credentials.username" autofocus>
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="Password" name="password" type="password"
+                                    ng-model="credentials.password" value="">
+                                </div>
+                                <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
-                <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></div>
             </div>
-            <div class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp">
-                <div class="bottom-text bottom-text-temp" style="padding-top:52px;padding-bottom:30px;">
-                    <h3>Efficiency</h3>
-                    <p>With Technology at core bringing disruptive business models to Logistics industry and getting better solutions and services for sustainable growth.</p>
-                </div>
-                <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
-            </div>
-            <div class="clearfix"></div>
         </div>
     </div>
-</div>
-<!-- //banner-bottom footer -->
-<div class="footer footer-temp" ng-controller="contactController">
+    <!-- //banner -->
+
+    <!-- banner-bottom banner-bottom-temp -->
+    <div class="banner-bottom banner-bottom-temp" id="about">
+        <div class="container">
+            <h2 class="tittle tittle-temp">WELCOME TO LOGIPORT</h2>
+            <div class="bottom-grids bottom-grids-temp">
+                <div id="reliability" class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp animated zoomIn">
+                    <div class="bottom-text bottom-text-temp">
+                        <h3>Reliability</h3>
+                        <p>Time to value<br> manage logistics risk<br> Client centric approach<br> efficient services</p>
+                        <br>
+                        <br>
+                        <br>
+                    </div>
+                    <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-road" aria-hidden="true"></span></div>
+                </div>
+                <div id="visibility" class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp animated zoomIn">
+                    <div class="bottom-text bottom-text-temp">
+                        <h3>Visiblity</h3>
+                        <p>Real Time tracking of fleet with complete geo-visualization,Load status and Driver status.</p>
+                        <br>
+                        <br>
+                        <br>
+                    </div>
+                    <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></div>
+                </div>
+                <div id="efficiency" class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp animated zoomIn">
+                    <div class="bottom-text bottom-text-temp" style="padding-top:52px;padding-bottom:30px;">
+                        <h3>Efficiency</h3>
+                        <p>With Technology at core bringing disruptive business models to Logistics industry and getting better solutions and services for sustainable growth.</p>
+                    </div>
+                    <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+            <style type="text/css">
+                #visibility{
+                    -webkit-animation-delay: 1s;
+                }
+                #efficiency{
+                    -webkit-animation-delay: 2s;
+                }
+            </style>
+            <script type="text/javascript">
+                $(document).ready(function(){
+                    $("#reliability, #visibility, #efficiency").hide();
+                    
+                    $(window).scroll(function(){
+                        if($(window).scrollTop() >= 500){
+                            $("#reliability").show();
+                            $("#visibility").show();
+                            $("#efficiency").show();
+                        }
+                    });    
+                });
+            </script>
+        </div>
+    </div>
+    <!-- //banner-bottom footer -->
+
+    <div id="contact" class="footer footer-temp" ng-controller="contactController">
     <div class="container">
         <div class="contact contact-temp">
             <div class="container">
@@ -189,4 +227,8 @@
         });
     });
     </script>
+
+
     <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+
+</div>
