--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 html, body{
+  
 	margin:0;
 	background:	#fff;
 	font-family: 'Open Sans', sans-serif;
@@ -34,7 +35,9 @@ body a:hover{
 	text-decoration:none;
 }
 /*-- header --*/
+
 .header-temp {
+  z-index: 5000;
   background: #05969b;
 }
 .navbar-temp {
@@ -487,7 +490,7 @@ top: 9%;
 /*-- Slider part Ends Here --*/
 /*-- banner-info-temp --*/
 .banner-info-temp {
-    margin-top: 206px;
+    margin-top: 110px;
 }
 
 .banner-info-temp h3{
@@ -504,6 +507,7 @@ position:relative;
 .banner-bottom-temp{
 padding:80px 0;
 background:#eee;
+padding-bottom: 150px;
 }
 h3.tittle-temp,h2.tittle-temp{
 text-align:center;
@@ -517,6 +521,7 @@ margin-bottom:50px;
 background:#fff;
 padding: 52px 15px;
 border: 2px solid transparent;
+box-shadow: 2px 2px 10px black;
 }
 .bottom-text-temp h3{
 text-align:center;
@@ -547,6 +552,7 @@ line-height:2em;
 }
 .bottom-grid-temp:hover div.bottom-text-temp{
 border:2px solid #2FD828;
+box-shadow: 0px 0px 0px #2FD828;
 transition: 0.5s all;
 	-webkit-transition: 0.5s all;
 	-o-transition: 0.5s all;
