--- a/public/components/staticpart/home.html
+++ b/public/components/staticpart/home.html
@@ -131,10 +131,21 @@
 
     <!-- banner-bottom banner-bottom-temp -->
     <div class="banner-bottom banner-bottom-temp" id="about">
-        <div class="container">
+        <div class="container-fluid" style="margin-left:100px;margin-right:100px">
             <h2 class="tittle tittle-temp">WELCOME TO LOGIPORT</h2>
             <div class="bottom-grids bottom-grids-temp">
-                <div id="reliability" class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp animated zoomIn">
+
+                <div class="col-md-3 col-md-3-temp bottom-grid bottom-grid-temp">
+                    <div class="bottom-text bottom-text-temp" style="padding-bottom:60px;">
+                        <h3>Ontime Pickup & Drops</h3>
+                        <p>With our tech enabled dedicated fleet,<br> we ensure lesser lead and turn around time</p>
+                        <br>
+                        <br>
+                        <br>
+                    </div>
+                    <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-time" aria-hidden="true"></span></div>
+                </div>
+                <div class="col-md-3 col-md-3-temp bottom-grid bottom-grid-temp">
                     <div class="bottom-text bottom-text-temp">
                         <h3>Reliability</h3>
                         <p>Time to value<br> manage logistics risk<br> Client centric approach<br> efficient services</p>
@@ -142,9 +153,9 @@
                         <br>
                         <br>
                     </div>
-                    <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-road" aria-hidden="true"></span></div>
+                    <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></div>
                 </div>
-                <div id="visibility" class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp animated zoomIn">
+                <div class="col-md-3 col-md-3-temp bottom-grid bottom-grid-temp">
                     <div class="bottom-text bottom-text-temp">
                         <h3>Visiblity</h3>
                         <p>Real Time tracking of fleet with complete geo-visualization,Load status and Driver status.</p>
@@ -152,38 +163,18 @@
                         <br>
                         <br>
                     </div>
-                    <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></div>
+                    <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></div>
                 </div>
-                <div id="efficiency" class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp animated zoomIn">
+                <div  class="col-md-3 col-md-3-temp bottom-grid bottom-grid-temp">
                     <div class="bottom-text bottom-text-temp" style="padding-top:52px;padding-bottom:30px;">
                         <h3>Efficiency</h3>
                         <p>With Technology at core bringing disruptive business models to Logistics industry and getting better solutions and services for sustainable growth.</p>
                     </div>
                     <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
                 </div>
+
                 <div class="clearfix"></div>
             </div>
-            <style type="text/css">
-                #visibility{
-                    -webkit-animation-delay: 1s;
-                }
-                #efficiency{
-                    -webkit-animation-delay: 2s;
-                }
-            </style>
-            <script type="text/javascript">
-                $(document).ready(function(){
-                    $("#reliability, #visibility, #efficiency").hide();
-                    
-                    $(window).scroll(function(){
-                        if($(window).scrollTop() >= 500){
-                            $("#reliability").show();
-                            $("#visibility").show();
-                            $("#efficiency").show();
-                        }
-                    });    
-                });
-            </script>
         </div>
     </div>
     <!-- //banner-bottom footer -->
@@ -195,6 +186,45 @@
                 <div class="contact-page">
                     <div class="contact-info">
                         <h2 class="tittle tittle-temp">CONTACT</h2>
+                    </div>
+                        <div class="contact-map contact-map-temp" id="overlay">
+                    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1253.1847208947454!2d72.87361680663666!3d19.11640598982782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1453056400534" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+                            <!-- <iframe id="map" width="600" height="450" frameborder="0" style="border:0"
+            src="https://www.google.com/maps/embed/v1/view?key=AIzaSyDBPK-J5T-VdpIxw8nYmnm9wubPnuICYos&center=19.1161986,72.873237&zoom=18&maptype=roadmap" allowfullscreen></iframe>
+                        </div> -->
+                            <div id="map" style="width:100%;height:370px;"></div>
+                                <script type="text/javascript">
+                                    var map;
+                                    function initMap() {
+                                        var myLatLng = {lat: 19.1168602, lng: 72.8732958};
+                                      map = new google.maps.Map(document.getElementById('map'), {
+                                        center: myLatLng,
+                                        zoom: 18
+                                      });
+
+                                      var marker = new google.maps.Marker({
+                                        position: myLatLng,
+                                        map: map,
+                                        title: 'Logiport Pvt. Ltd.'
+                                      });
+
+                                      var contentString = "<h4 style='color:black'>Logiport Pvt. Ltd.</h4>"+
+                                                            "<p style='margin-top:10px;color:grey'>L-603, Maheshwari Nagar,<br>"+
+                                                            "Chakala, Andheri (East),<br>"+
+                                                            "Mumbai - 400 093</p>";
+
+                                      var infowindow = new google.maps.InfoWindow({
+                                        content: contentString
+                                      });
+                                      marker.addListener('click', function() {
+                                        infowindow.open(map, marker);
+                                      });
+                                    }
+                                </script>
+                                <script async defer
+                                  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBPK-J5T-VdpIxw8nYmnm9wubPnuICYos&callback=initMap">
+                                </script>
+
                     </div>
                     <div class="contact-form contact-form-temp">
                         <form>
